// Event API Proto
//
//
// compile: protoc -I eventAPI/ eventAPI/eventAPI.proto --go_out=plugins=grpc:eventAPI/

syntax = "proto3";

package EventClient;

message EventObj {
  // unique ID for client
  string clientID = 1;
  // to specify what type of event they are sending
  string eventID = 2;
  // all data and any other sort of tags
  map<string, string> dataSet = 3;

}

message EventResp {
  string response = 1;
}

// Event Sender definition
service EventSender {
  // Sends the event and does not get anything back
  rpc SendEvent (EventObj) returns (EventResp) {}
}
